# mcvideo-3

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
extractor/: .gitignore  gradle.properties
extractor/src/main/java/yes/mediumdifficulty/extractor/: Extractor.java
extractor/src/main/java/yes/mediumdifficulty/extractor/client/: ExtractorClient.java
extractor/src/main/resources/: extractor.mixins.json  fabric.mod.json
src/: command.rs  extractor.rs  http_server.rs  main.rs  map_colours.rs  nearest_colour.rs  processor.rs  resource_pack.rs  util.rs
src/assets/: pack.mcmeta  sounds.json
