[package]
name = "mcvideo-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug=true

[dependencies]
ffmpeg-next = "6.0.0"
valence = { git = "https://github.com/valence-rs/valence" }
bevy_ecs = "0.10.0"
byteorder = "1.4.3"
num-integer = "0.1.45"
rayon = "1.7.0"